--- a/style/Nav-Bar-style.css
+++ b/style/Nav-Bar-style.css
@@ -1,11 +1,4 @@
-/*
-  --backgroundcolordark: #17132c;
-  --textcolorbright: #78d400;
-*/
-
-.navbar {
-  width: 100%;
-}
+.navbar {  width: 100%; }
 
 nav {
   position: sticky;
@@ -29,9 +22,7 @@ nav {
   display: inline-block;
 }
 
-.menu-area li {
-  display: inline-block;
-}
+.menu-area li {  display: inline-block; }
 
 .menu-area a {
   color: #fff;
@@ -50,50 +41,4 @@ nav {
 .menu-area a:hover {
   background: var(--textcolorbright);
   color: var(--backgroundcolordark);
-}
-
-ul {
-  margin: 0;
-}
-
-.Web-Limits {
-  position: absolute;
-  max-width: 1200px;
-  width: 100%;
-  height: 900px;
-  margin-top: 100px;
-  border: 1px solid #fff;
-}
-
-.Hero{
-  height: 100%;
-  overflow: hidden;
-}
-
-.Hero-Grid-Container{
-  display: grid;
-  grid-template-areas: 
-    'one two'
-    'three two';
-  height: 100%;
-}
-
-.Hero-Item{
-  background-color:darkgray;
-  text-align: center;
-  vertical-align: middle;
-  border: 2px solid black;
-}
-
-.Item1{grid-area: one;}
-
-.Item2{grid-area: two;}
-
-.Item3{grid-area: three;}
-
-.Picture{
-  object-fit: cover;
-  height: 600px;
-  width: 600px;
-  
 }
