Hero prototype no:1

--- a/style/style.css
+++ b/style/style.css
@@ -23,6 +23,12 @@ h1{
   font-family: "Cornerstone", Monospace;
   font-size: 110px;
 }
+
+a{
+  color: darkgray;
+  font-size: 25px;
+}
+
 #Hero-Heading{
   color: var(--textcolorbright); 
 }
