--- a/style/Hero-Style.css
+++ b/style/Hero-Style.css
@@ -1,36 +1,72 @@
-.Hero{
-    margin-top: 80px;
-    position: absolute;
-    height: 1000px;
-    width: 100%;
-    max-width: 1400px;
-    overflow: hidden;
-    border: 1px solid #fff;
-  }
-  
-  .Hero-Grid-Container{
-    display: grid;
-    gap: 1rem;
-    grid-auto-columns: 1fr;
-    grid-template-areas: 
-      'one two'
-      'three two';
-    height: 100%;
-  }
-  
-  .Hero-Item{
-    background-color:darkgray;
-    text-align: center;
-    vertical-align: middle;
-    border: 2px solid black;
-  }
-  
-  .Item1{grid-area: one;} .Item2{grid-area: two;}
-  
-  .Hero-Button{
-    grid-area: three; 
-    height: 60px; 
-    margin: auto 0 auto 0;
-    text-align: center; 
-    background-color: var(--textcolorbright); 
-  }
+.Hero {
+  margin-top: 80px;
+  position: absolute;
+  height: 1000px;
+  width: 100%;
+  max-width: 1400px;
+  overflow: hidden;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.041);
+}
+
+.Hero-Grid-Container {
+  display: grid;
+  gap: 4.5rem;
+  grid-auto-columns: 1fr;
+  grid-template-areas:
+    "one two"
+    "three two";
+  height: 100%;
+}
+
+.Hero-Item {
+  text-align: center;
+  vertical-align: middle;
+}
+
+.Item1 {
+  grid-area: one;
+}
+.Hero-Card-div {
+  grid-area: two;
+}
+
+.Hero-Button {
+  grid-area: three;
+  height: 60px;
+  margin: auto 0 auto 0;
+  text-align: center;
+  background-color: var(--textcolorbright);
+}
+
+.card {
+  transition: 0.3s;
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+  position: relative;
+  display: block;
+}
+
+.card:hover {
+}
+
+img {
+  height: 100%;
+  width: auto;
+  object-fit: cover;
+  object-position: 75%;
+  border-radius: 5px 5px 0 0;
+}
+
+.container {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+  background-color: rgba(0, 0, 0, 0.384);
+  color: darkgray;
+  padding: 2px 16px;
+  backdrop-filter: blur(9.5px);
+  -webkit-backdrop-filter: blur(9.5px);
+}
