--- a/style/Nav-Bar-style.css
+++ b/style/Nav-Bar-style.css
@@ -39,6 +39,6 @@ nav {
 }
 
 .menu-area a:hover {
-  background: var(--textcolorbright);
-  color: var(--backgroundcolordark);
+  background: var(--Brightneongreen);
+  color: var(--Darkblueishblack);
 }
