--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,6 @@
 :root{
   --Darkblueishblack: #17132c;
+  --Darkblueishblackopaque: #17132cc7;
   --Brightneongreen: #78d400;
   --Smokewhite: #afafaf;
 }
