--- a/style/Hero-Style.css
+++ b/style/Hero-Style.css
@@ -1,125 +1,87 @@
-@media (min-width: 900px) {
-  .Hero {
-    display: flex;
-    width: 100%;
-    justify-content: center;
-    margin-top: 80px;
-    position: absolute;
-  }
-  .Hero-Grid-Container {
-    height: 100%;
-    display: grid;
-    gap: 0.5rem;
-    margin-left: 20px;
-    margin-right: 20px;
-    grid-template-areas:
-      "one"
-      "three"
-      "two";
-  }
-  .Hero-Buttons-div {
-    display: grid;
-    grid-template-areas:
-      "button1"
-      "button2";
-    gap: 1rem;
-  }
+.Hero {
+  display: flex;
+  position: relative;
+  width: 100%;
+  justify-content: center;
+  height: 800px;
 }
-
-@media (min-width: 1200px) {
-  .Hero {
-    display: flex;
-    width: 100%;
-    justify-content: center;
-    margin-top: 80px;
-    position: absolute;
-    height: 700px;
-  }
-  .Hero-Grid-Container {
-    height: 100%;
-    max-width: 1300px;
-    display: grid;
-    gap: 4.5rem;
-    grid-auto-columns: 1fr;
-    grid-auto-rows: 0.9fr 0.1fr;
-    grid-template-areas:
-      "one two"
-      "three two";
-  }
-  .Hero-Buttons-div {
-    display: grid;
-    grid-auto-columns: 1fr;
-    grid-template-areas: "button1 button2";
-    gap: 1rem;
-  }
+.Hero-Grid-Container {
+  height: 100%;
+  max-width: 1400px;
+  display: grid;
+  gap: 10px;
+  grid-template-columns: 1fr 1fr;
 }
 
 .Hero-Item {
-  text-align: center;
   vertical-align: middle;
 }
 
-.Hero-Heading-and-message {
-  grid-area: one;
+.Hero-Message {
   display: block;
-  justify-content: center;
-  align-items: center;
-}
-
-.Hero-Card-div {
-  grid-area: two;
+  align-items: left;
 }
 
 .Hero-Button {
-  height: 60px;
+  height: 90px;
   width: 100%;
+  max-width: 400px;
   border-radius: 10px;
   margin: auto 0 auto 0;
   text-align: center;
-  background-color: var(--Brightneongreen);
-  font-size: 20px;
+  background-color: var(--Darkblueishblack);
+  color: var(--Smokewhite);
+  font-size: 32px;
+  font-weight: bold;
   border: 0;
 }
 
-.find-talent-button {
-  grid-area: button1;
-}
-.find-work-button {
-  grid-area: button2;
-  color: var(--Brightneongreen);
-  background-color: var(--Darkblueishblack);
-  border: 4px solid var(--Brightneongreen);
-}
-
 .card {
-  transition: 0.3s;
+  position: relative;
   width: 100%;
   height: 100%;
-  border-radius: 25px;
-  position: relative;
+  overflow: hidden;
+  border-radius: 10px;
   display: block;
-  box-shadow: 0 5px 40px 0 #00000086;
+  border-bottom: var(--Darkblueishblack);
+  border-style: solid;
+  border-width: 2px;
 }
 
 img {
   height: 100%;
   width: auto;
+  max-height: 700px;
+  max-width: 500px;
   object-fit: cover;
   object-position: 75%;
-  border-radius: 5px 5px 0 0;
-  border-radius: 25px;
+  border-radius: 10px;
 }
 
 .container {
-  position: absolute;
+  position: relative;
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 1;
-  background-color: #00000062;
-  color: #a9a9a9;
+  z-index: 0;
+  display: grid;
+  grid-template-columns: 0.75fr 0.25fr;
+  color: var(--Darkblueishblack);
   padding: 2px 16px;
   backdrop-filter: blur(9.5px);
   -webkit-backdrop-filter: blur(9.5px);
   border-radius: 0px 0px 25px 25px;
+}
+
+#text1{
+  font-size: 30px;
+  font-weight:bold;
+  margin: 5px;
+}
+.container p{
+  margin: 5px;
+}
+
+#text3{
+  font-size: 25px;
 }
