--- a/style/style.css
+++ b/style/style.css
@@ -1,13 +1,3 @@
-*, *::before, *::after{
-  box-sizing: border-box;
-}
-
-@property --rotate {
-  syntax: "<angle>";
-  initial-value: 132deg;
-  inherits: false;
-}
-
 :root{
   --Darkblueishblack: #17132c;
   --Darkblueishblackopaque: #17132cc7;
@@ -20,10 +10,9 @@ html{
 }
 
 body {
-  background-color: var(--Darkblueishblack);
+  background-color: var(--Smokewhite);
   font-family: Arial, Helvetica, sans-serif;
   justify-content: center;
-  display: flex;
   min-height: 300vh;
   margin: 0;
   padding: 0;
@@ -37,12 +26,12 @@ h1{
 }
 
 a{
-  color: var(--Smokewhite);
+  color: var(--Darkblueishblack);
   font-size: 25px;
 }
 
 #Hero-Heading{
-  color: var(--Brightneongreen); 
+  color: var(--Darkblueishblack); 
 }
 
 @font-face {
