--- a/style/Hero-Style.css
+++ b/style/Hero-Style.css
@@ -38,14 +38,15 @@
 
 .card {
   position: relative;
-  width: 100%;
-  height: 100%;
+  /* width: 100%; */
+  max-height: 800px; 
   overflow: hidden;
   border-radius: 10px;
   display: block;
   border-bottom: var(--Darkblueishblack);
   border-style: solid;
   border-width: 2px;
+  padding-top: 30px;;
 }
 
 img {
@@ -56,10 +57,16 @@ img {
   object-fit: cover;
   object-position: 75%;
   border-radius: 10px;
+  display: block;
+  margin: auto;
 }
 
 .container {
   position: relative;
+  max-width: 500px;
+  margin: auto;
+  margin-top: 20px;
+  margin-bottom: 10px;
   bottom: 0;
   left: 0;
   right: 0;
@@ -73,6 +80,13 @@ img {
   border-radius: 0px 0px 25px 25px;
 }
 
+.Hero-Card-div{
+  height: 100%;
+  overflow: hidden;
+  display: block;
+
+}
+
 #text1{
   font-size: 30px;
   font-weight:bold;
@@ -84,4 +98,5 @@ img {
 
 #text3{
   font-size: 25px;
+  margin: auto;
 }
