changes to the Description section

--- a/style/Description-section.css
+++ b/style/Description-section.css
@@ -1,15 +1,42 @@
 .Description{
-    width: 100%;
-    min-height: 1000px;
-    background-color: darkgray;
     position: relative;
+    width: 100%;
+    min-height: 1100px;
+    background-color: darkgray;
+    justify-content: center;
+    overflow: hidden;
 }
 
 .Des-Container{
+    position: relative;
     max-width: 1400px;
+    min-height: 1000px;
+    z-index: 1;
+    margin: auto;
+    background-color: rgb(165, 130, 130);
 }
 
-.Description-image1{
-    position: relative;
+.Description-image{
+    position:absolute;
+    height: 300px;
+    width: 300px;
+    object-fit: cover;
+    display: block;
+}
+
+.Dimage1{
     margin-left: 0;
 }
+.Dimage2{
+    top: 200px;
+    right: 0px;
+}
+.Dimage3{
+    top: 450px;
+    left: 100px;
+}
+.Dimage4{
+    top: 800px;
+    right: 0px;
+}
+
