--- a/style/Tech-We-Use.css
+++ b/style/Tech-We-Use.css
@@ -14,6 +14,10 @@
     height: 300px;
     width: 300px;
     text-align: center;
+    vertical-align: middle;
+}
+.TWU-Box-3{
+    padding-top:0px;
 }
 .TWU-grid-for-boxes{
     height: max-content;
@@ -27,4 +31,8 @@
 .TWU-grids{
     height: max-content;
     width: max-content;
+}
+#TWU-Header{
+    margin-bottom: 20px;
+    margin-top: 20px;
 }
