--- a/style/Tech-We-Use.css
+++ b/style/Tech-We-Use.css
@@ -6,8 +6,9 @@
   max-width: 1400px;
   margin: auto;
   overflow: hidden;
-  min-height: 600px;
+  min-height: max-content;
   padding-top: 60px;
+  padding-bottom: 80px;
 }
 
 #TWU-Header {
@@ -39,7 +40,7 @@
 
 .TWU-Tech-Box {
   display: table-cell;
-  height: 300px;
+  height: 250px;
   width: 300px;
   border-radius: 8px;
   border-width: 2px;
@@ -81,4 +82,5 @@
 .TWU-Tech-Box-Title{
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-weight: 500;
+  font-size: 20px;
 }
