Steps section is added to the page and Description section is commented out

--- a/style/style.css
+++ b/style/style.css
@@ -44,3 +44,10 @@ a {
   border-width: 1px;
   border-style: dashed;
 }
+
+.Section-Container{
+  max-width: 1400px;
+  margin: auto;
+  overflow: hidden;
+  min-height: max-content;
+}
