--- a/style/Steps.css
+++ b/style/Steps.css
@@ -1,30 +1,105 @@
-.Steps-Content{
-    justify-content: space-between;
-    display: flex;
-    /* -webkit-box-pack: justify; */
-    /* -ms-flex-align: center; */
-    align-items: center;
+.Steps-Section {
+  padding-top: 200px;
+  padding-bottom: 300px;
 }
 
-.get-your-business-online{
-    font-family:'Courier New', Courier, monospace;
-    font-size: 110px;
-    font-weight: 800;
-    word-break: break-word;
-    text-transform: uppercase;
-    text-rendering: geometricPrecision;
-    -webkit-font-smoothing: antialiased;
-    position: relative;
-    display: block;
-    letter-spacing: 0;
+.Steps-Container {
+  text-align: center;
 }
 
-.steps-step{
-    /* display: -webkit-box;
-    display: -ms-flexbox; */
-    display: flex;
-    -webkit-box-align: start;
-    /* -ms-flex-align: start; */
-    align-items: flex-start;
-    margin-bottom: 32px;
+.Steps-Content {
+  justify-content: space-around;
+  display: flex;
+  align-items: center;
+  gap: 30px;
+}
+
+.Steps-Headline-div {
+  padding-bottom: 100px;
+}
+
+.Steps-Headline {
+  font-family: "Montserrat", sans-serif;
+  font-size: 100px;
+  font-weight: 800;
+  word-break: break-word;
+  text-transform: uppercase;
+  text-rendering: geometricPrecision;
+  -webkit-font-smoothing: antialiased;
+  position: relative;
+  display: block;
+  letter-spacing: 0;
+}
+
+.Steps-step {
+  -webkit-box-align: start;
+  display: flex;
+  align-items: flex-start;
+  margin-bottom: 32px;
+  border: 0;
+  border-bottom: 1px;
+  border-style: solid;
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+
+.Steps-step:hover {
+  box-shadow: 0 18px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  padding-top: 15px;
+  padding-bottom: 30px;
+  border-radius: 4px;
+}
+
+.step-number-index {
+  font-size: 100px;
+  margin-bottom: 0;
+  margin-top: 10px;
+  margin-right: 30px;
+  margin-left: 20px;
+  font-weight: 700;
+}
+
+.Steps-step-description {
+  max-width: 700px;
+  text-align: left;
+}
+
+.Steps-step-description-Headline {
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 25px;
+  line-height: 1.2em;
+  letter-spacing: 0;
+  text-transform: none;
+  text-decoration: none;
+  text-rendering: geometricPrecision;
+  -webkit-font-smoothing: antialiased;
+  margin-bottom: 0;
+}
+
+.Steps-step-description-text {
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  letter-spacing: 0;
+  text-transform: none;
+  text-decoration: none;
+  text-rendering: geometricPrecision;
+  -webkit-font-smoothing: antialiased;
+  margin-top: 10px;
+}
+
+.Steps-step-picture-div {
+}
+
+.Steps-step-picture {
+  position: relative;
+  display: flex;
+  overflow: hidden;
+  height: 100%;
+  max-width: 900px;
+  margin-left: auto;
+  border-radius: 4px;
 }
