--- a/style/style.css
+++ b/style/style.css
@@ -11,7 +11,7 @@ html {
 
 body {
   background-color: white;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Montserrat", sans-serif;
   justify-content: center;
   margin: 0;
   padding: 0;
@@ -48,6 +48,6 @@ a {
 .Section-Container{
   max-width: 1400px;
   margin: auto;
-  overflow: hidden;
+  /* overflow: hidden; */
   min-height: max-content;
 }
