--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,3 @@
-
-
-
-
 /*//////////////////////////////////////////////////////////////////
 [ FONT ]*/
 
@@ -382,6 +378,7 @@ iframe {
   display: -ms-flexbox;
   display: flex;
   flex-wrap: wrap;
+  padding-bottom: 20px;
 }
 
 .login100-form-btn {
