--- a/css/main.css
+++ b/css/main.css
@@ -327,16 +327,16 @@ iframe {
   top: -1px;
   left: -1px;
   pointer-events: none;
-  border: 1px solid #fc00ff;
+  border: 1px solid #006aff;
   border-radius: 10px;
 
   visibility: hidden;
   opacity: 0;
 
-  -webkit-transition: all 0.4s;
-  -o-transition: all 0.4s;
-  -moz-transition: all 0.4s;
-  transition: all 0.4s;
+  -webkit-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  transition: all 0.3s;
 
   -webkit-transform: scaleX(1.1) scaleY(1.3);
   -moz-transform: scaleX(1.1) scaleY(1.3);
