--- a/css/socials-style.css
+++ b/css/socials-style.css
@@ -84,7 +84,7 @@
   border-style: solid;
   border-width: 4px;
   border-color: var(--MainColor);
-  box-shadow: 10px 10px 0px var(--MainColor);
+  /* box-shadow: 10px 10px 0px var(--MainColor); */
 }
 
 .links-container {
