changed the descriptions and the rest

--- a/css/main-style.css
+++ b/css/main-style.css
@@ -11,6 +11,10 @@
   height: 600px;
 }
 
+.container{
+  margin-bottom: 120px;
+}
+
 @media (min-width: 375px) {
   .Hero-section {
     min-height: 800px;
