--- a/css/predefinitions.css
+++ b/css/predefinitions.css
@@ -30,7 +30,6 @@ body {
   color: var(--TextColor);
   font-family: Montserrat;
   text-decoration: none;
-  padding-bottom: 20px;
 }
 
 body:after,
@@ -166,6 +165,44 @@ button:hover {
   min-height: 55px;
 }
 
+@media (min-width: 320px) {
+  .btn-md {
+    display: inline-block;
+    color: var(--TextColor);
+    background-color: var(--BGBright);
+    border: 2px solid var(--MainColor);
+    border-radius: 10px;
+    box-shadow: 5px 5px 0px var(--MainColor);
+    padding: 8px 10px;
+    margin: 20px 0px;
+    font-size: 12px;
+    font-weight: 900;
+    text-align: center;
+    text-decoration: none;
+    transition: all 0.3s ease 0s;
+    min-height: 20px;
+  }
+}
+
+@media (min-width: 990px) {
+  .btn-md {
+    display: inline-block;
+    color: var(--TextColor);
+    background-color: var(--BGBright);
+    border: 2px solid var(--MainColor);
+    border-radius: 10px;
+    box-shadow: 10px 10px 0px var(--MainColor);
+    padding: 15px 32px;
+    margin: 30px 0px;
+    font-size: 16px;
+    font-weight: 900;
+    text-align: center;
+    text-decoration: none;
+    transition: all 0.3s ease 0s;
+    min-height: 55px;
+  }
+}
+
 .btn-md:hover {
   /* background-color: var(--MainColor); */
   color: var(--MainColor);
@@ -219,6 +256,19 @@ header {
   background-color: var(--BGBright);
   margin-right: 15px;
   margin-left: 15px;
+}
+
+@media (min-width: 320px) {
+  .nav-button {
+    min-height: 20px;
+    min-width: 100px;
+  }
+}
+
+@media (min-width: 990px) {
+  .nav-button {
+    min-height: 55px;
+  }
 }
 
 /* ------------------------- */
@@ -276,6 +326,11 @@ header {
   margin-left: auto;
 }
 
+@media (min-width: 200px) {
+  .container {
+    max-width: 300px;
+  }
+}
 @media (min-width: 375px) {
   .container {
     max-width: 360px;
