--- a/css/socials-style.css
+++ b/css/socials-style.css
@@ -80,6 +80,7 @@
   margin-top: 11vh;
   max-width: 100%;
   height: 250px;
+  filter: hue-rotate(-26deg) saturate(200%);
   border-radius: 10%;
   border-style: solid;
   border-width: 4px;
